@@ -3,6 +3,7 @@
 - Improved: Scrollbar is shown in scrollable lists
 - Improved: Better logic on login page for receiving Home Assistant session token (#670)
 - Improved: Logging on login page for Home Assistant connection (#670)
+- Improved: Moved shortcuts option from behavior to appearance settings
 - Fixed: Home Assistant offline error (#670)
 - Fixed: On login pages all barcode formats were allowed, now only QR code format is recognized
 - Fixed: Deprecated Google Play developer profile link
